--- a/head.html
+++ b/head.html
@@ -63,7 +63,7 @@
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
     {% if site.post_preview_image %}
-    <meta property="og:image" content="{{ site.url }}/LTC.jpeg">
+    <meta property="og:image" content="{{ site.url }}/LTC.jpg">
     {% endif %}
 
     <!-- Twitter Card -->
